--- a/Manto2015_new/web/rev.html
+++ b/Manto2015_new/web/rev.html
@@ -15,7 +15,7 @@
   <!-- IS: Encabezado de Pagina (Banner) -->
    <section class="barraBanner2">
     <span>IDS</span>
-    <span id="big">User Validator</span>
+    <span id="big">MEIAS Validator</span>
     <span>UPCH</span>
   </section>
   <!-- FS: Encabezado de Pagina (Banner) -->          
@@ -76,7 +76,7 @@
     <b>Equpo conformado por:</b><br />
     <li>Cristian Michel Pérez Zárate</li>
     <li>Erick de Jesús Camacho Albores</li>
-    <li>Isabela</li>
+    <li>Isabela  López Ruiz</li>
   </section>
   <!-- Fin de Sección - Pie de página -->
 <script type="text/javascript" src="js/jquery.min.js" ></script>
